--- a/git_homework/w5d3_hmwk/hogwarts/main.css
+++ b/git_homework/w5d3_hmwk/hogwarts/main.css
@@ -1,2 +1,6 @@
-
-body {background-color: rgb(173, 103, 152)}        /*or any color of your choosing*/
+ /*or any color of your choosing*/
+body {
+    background-color: rgb(173, 103, 152);
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}       
