--- a/git_homework/Module2/week_1/w9d2_hmwk/student_labs/dashboard/src/app/average-rating/average-rating.component.html
+++ b/git_homework/Module2/week_1/w9d2_hmwk/student_labs/dashboard/src/app/average-rating/average-rating.component.html
@@ -1,1 +1,7 @@
-<p>average-rating works!</p>
+<!-- <p>average-rating works!</p> -->
+
+<h4>Average Rating</h4>
+<div class="card" style="height: 320px; width: 300px; margin-left: 280px;">
+<br>
+    <h2>4.6</h2>
+</div>
