--- a/git_homework/Module2/week_1/w9d2_hmwk/student_labs/dashboard/src/app/reviews/reviews.component.html
+++ b/git_homework/Module2/week_1/w9d2_hmwk/student_labs/dashboard/src/app/reviews/reviews.component.html
@@ -1,1 +1,7 @@
-<p>reviews works!</p>
+<!-- <p>reviews works!</p>  -->
+
+<div class="card" style="height: 320px; width: 250px; margin-left: 280px;">
+    <h4>Reviews</h4>
+    <br>
+    <h2>1,281</h2>
+</div>
