--- a/git_homework/Module2/week_1/w9d2_hmwk/student_labs/dashboard/src/app/sentiment-analysis/sentiment-analysis.component.html
+++ b/git_homework/Module2/week_1/w9d2_hmwk/student_labs/dashboard/src/app/sentiment-analysis/sentiment-analysis.component.html
@@ -1,1 +1,12 @@
-<p>sentiment-analysis works!</p>
+<!-- <p>sentiment-analysis works!</p> -->
+
+
+<div class="card" style="height: 350px; width: 250px; margin-left: 800px;">
+    <h4>Sentiment Analysis</h4>
+    <br>
+    <h3>960</h3>
+    <br>
+    <h3>122</h3>
+    <br>
+    <h3>321</h3>
+</div>
