--- a/git_homework/Module2/week_1/w9d2_hmwk/student_labs/dashboard/src/app/sidebar/sidebar.component.html
+++ b/git_homework/Module2/week_1/w9d2_hmwk/student_labs/dashboard/src/app/sidebar/sidebar.component.html
@@ -1,1 +1,18 @@
-<p>sidebar works!</p>
+<!-- <p>sidebar works!</p>  -->
+
+<div class="card" style="height: 550px; width: 200px;">
+  <ul>
+        <li>Dashboard</li>
+            <br>
+        <li>Widget</li>
+            <br>
+        <li>Reviews</li>
+            <br>
+        <li>Customers</li>
+            <br>
+        <li>Online Analysis</li>
+            <br>
+        <li>Settings</li>
+            <br>
+    </ul>
+</div>
