--- a/git_homework/Module2/week_1/w9d2_hmwk/student_labs/dashboard/src/app/website-visitors/website-visitors.component.html
+++ b/git_homework/Module2/week_1/w9d2_hmwk/student_labs/dashboard/src/app/website-visitors/website-visitors.component.html
@@ -1,1 +1,10 @@
-<p>website-visitors works!</p>
+<!-- <p>website-visitors works!</p>  -->
+
+<div class="card" style="height: 300px; width: 1000px; margin-left: 340px; margin-top: 350px;">
+    <h4>Website Visitors</h4>
+    <br>
+    <h2>821</h2>
+   
+   <div class="card" style="height: 220px; width: 900px; margin-top: 70px;">
+ </div>
+</div>
